Issue #424: Add CLI options for specific query execution - WinRm
* Developped WinRmCli which enables to execute WinRm queries from the CLI.
* Added Unit tests.
* added WinRm.exe to Windows and Linux pom.xml
* Tested WinRm.exe.